Revert "Fix table wrapping"
This reverts commit c911cd0dbd06f6c0e774396174fb383fc63d172f.

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -806,7 +806,6 @@ dd {
 
 table.docutils {
   width: 100%;
-  table-layout: fixed;
 }
 
 table.docutils.footnote {
@@ -831,7 +830,6 @@ table.docutils tbody tr td {
   border-top: solid 1px var(--table-border);
   padding: 7px 5px;
   vertical-align: top;
-  overflow-wrap: break-word;
 }
 table.docutils tbody tr:last-child th,
 table.docutils tbody tr:last-child td {
